# MLP_patterns

./: Activations.h  CMakeLists.txt  DataHelpers.h  Helpers.h  ImageData.cpp  ImageData.h  Network.cpp  Network.h  PrepareData.cpp  PrepareData.h  main.cpp  network
